# HACKATHON-PROJECT

./: .dockerignore  .gitignore  Dockerfile  LICENSE  README.md  client.py  debug_reset.py  inference.py  models.py  openenv.yaml  pre_validation.py  pyproject.toml  requirements.txt
.github/workflows/: sync_to_hf.yml
math_reasoning_env/: __init__.py  client.py  inference.py  models.py  sample_interface.py
math_reasoning_env/server/: app.py
server/: Dockerfile  __init__.py  app.py  math_environment.py  requirements.txt
tasks/: __init__.py  easy_arithmetic.py  hard_reasoning.py  medium_algebra.py
